objects/LGNAFeatureFlags__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Feature Flags for LGNA Projects</description>
    <fields>
        <fullName>LGNA_Billing_Profile_Retro_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable or Disabled LGNA Billing Profile Retro Cancellations.</description>
        <label>LGNA Billing Profile Retro Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGNA_Category_Retro_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable or Disable LGNA Category Cancellations.</description>
        <label>LGNA Category Retro Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGNA_Grp_Section_Retro_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable or Disable LGNA Group Section Retro Cancellations</description>
        <label>LGNA Grp Section Retro Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGNA_Quote_Request_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LGNA Quote Request Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGNA_Quote_Request_SharePoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LGNA Quote Request SharePoint</label>
        <type>Checkbox</type>
    </fields>
    <label>LGNA Feature Flags</label>
</CustomObject>